--- a/CG_TF.cbp
+++ b/CG_TF.cbp
@@ -11,9 +11,15 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="./files/" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="GL" />
+					<Add library="GLU" />
+					<Add library="glut" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/CG_TF" prefix_auto="1" extension_auto="1" />
@@ -32,7 +38,35 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Arena.cpp" />
+		<Unit filename="Arena.h" />
+		<Unit filename="Circle.cpp" />
+		<Unit filename="Circle.h" />
+		<Unit filename="EstruturasBasicas.cpp" />
+		<Unit filename="EstruturasBasicas.h" />
+		<Unit filename="Helicoptero.cpp" />
+		<Unit filename="Helicoptero.h" />
+		<Unit filename="Rect.cpp" />
+		<Unit filename="Rect.h" />
+		<Unit filename="SVG.cpp" />
+		<Unit filename="SVG.h" />
+		<Unit filename="Tiro.cpp" />
+		<Unit filename="Tiro.h" />
+		<Unit filename="XML.cpp" />
+		<Unit filename="XML.h" />
+		<Unit filename="files/15-08-07 CG 2015-2 - TF.pdf" />
+		<Unit filename="files/arena.svg" />
+		<Unit filename="files/config.xml" />
+		<Unit filename="files/todo.txt" />
+		<Unit filename="imageloader.cpp" />
+		<Unit filename="imageloader.h" />
+		<Unit filename="images/earth.bmp" />
+		<Unit filename="images/stars1.bmp" />
+		<Unit filename="images/sun1.bmp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="makefile" />
+		<Unit filename="tinyxml2.cpp" />
+		<Unit filename="tinyxml2.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
